force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <description
  >Messages sent between clients and Milestone Consulting team members</description>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{0000}</displayFormat>
        <label>Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>