force-app/main/default/objects/Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Message Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>