force-app/main/default/objects/Message__c/fields/Client_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Client_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Notification Sent</label>
    <type>Checkbox</type>
</CustomField>