force-app/main/default/objects/Message__c/fields/Client_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Notification_Sent_Date__c</fullName>
    <label>Client Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>