force-app/main/default/objects/Message__c/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if the message has been deleted by the sender. Deleted messages are not shown but are retained for reporting purposes.</description>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>