force-app/main/default/objects/Message__c/fields/Is_Edited__c.field-meta.xml
<CustomField>
    <fullName>Is_Edited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this message has been edited after it was originally sent.</description>
    <label>Is Edited</label>
    <type>Checkbox</type>
</CustomField>