force-app/main/default/objects/Message__c/fields/Is_Read_By_Client__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_By_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Read By Client</label>
    <type>Checkbox</type>
</CustomField>