force-app/main/default/objects/Message__c/fields/Is_Read_By_Milestone_Team__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_By_Milestone_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Read By Milestone Team</label>
    <type>Checkbox</type>
</CustomField>