force-app/main/default/objects/Message__c/fields/Last_Edited_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Edited_Date__c</fullName>
    <description>Date and time when this message was last edited.</description>
    <label>Last Edited Date</label>
    <type>DateTime</type>
</CustomField>