force-app/main/default/objects/Message__c/fields/Mentioned_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Mentioned_Contacts__c</fullName>
    <label>Mentioned Contacts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>