force-app/main/default/objects/Message__c/fields/PM_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>PM_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PM Notification Sent</label>
    <type>Checkbox</type>
</CustomField>