force-app/main/default/objects/Message__c/fields/PM_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Notification_Sent_Date__c</fullName>
    <label>PM Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>