force-app/main/default/objects/Message__c/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Messages</relationshipLabel>
    <relationshipName>Project_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>