force-app/main/default/objects/Message__c/fields/Related_Task__c.field-meta.xml
<CustomField>
    <fullName>Related_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Task</label>
    <referenceTo>Project_Task__c</referenceTo>
    <relationshipLabel>Task Messages</relationshipLabel>
    <relationshipName>Task_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>