force-app/main/default/objects/Message__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sender</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sent Messages</relationshipLabel>
    <relationshipName>Sent_Messages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>