force-app/main/default/objects/Message__c/fields/View_File_Link__c.field-meta.xml
<CustomField>
    <fullName>View_File_Link__c</fullName>
    <label>View File Link</label>
    <type>Url</type>
</CustomField>