force-app/main/default/objects/Message__c/fields/Visible_To_Client__c.field-meta.xml
<CustomField>
    <fullName>Visible_To_Client__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >If false, this message is only visible to Milestone Consulting team members and not to clients.</description>
    <label>Visible to Client</label>
    <type>Checkbox</type>
</CustomField>